Commenti parte HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
   </head>
   <body>
 
+    <!-- header con i vari link e con un jumbotron (sembra un carousel ma senza pallini in basso)-->
+
+    <!-- sezione con 4 cards con comportamento on hover -->
+
+    <!-- carousel con recensioni di riviste -->
+
+    <!-- sezione divisa in due con a sinistra una immagine e a destra il menú -->
+
+    <!-- sezione con un dettaglio grafico ed una scritta centrale -->
+
+    <!-- sezione con 4 foto di staff con comportamento on hover -->
+
+    <!-- sezione con loghi di locali affiliati (o sponsor) -->
+
+    <!-- sezione con l'elenco di pizze in orizzontale (quelle esterne sono tagliate ma non vedo barre quindi immagino ci sia un hoverflow hidden) -->
+
+    <!-- sezione divisa in due con a sinistra alcuni eventi e a destra un fumetto -->
+
+    <!-- sezione con per prenotazione con vari input -->
+
+    <!-- footer con i vari link a sinistra e con una immagine a destra -->
+
     <script type="text/javascript" src="js/script.js"></script>
 
   </body>
