--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Pizza</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   </head>
   <body>
@@ -14,29 +15,68 @@
       <!-- header con i vari link e con un jumbotron (sembra un carousel ma senza pallini in basso)-->
       <header>
 
+        <!-- riga contenitore dei link -->
         <div class="link_row">
 
           <!-- pulsante ordina online -->
-          <div class="button">
-            <a class="white_text"href="#">ORDER ONLINE</a>
+          <div class="box left">
+            <a class="white_text button"href="#">ORDER ONLINE</a>
           </div>
 
-          <!-- parte sinistra dei link -->
-          <div v-for="(link, index) in headerLinks">
-            <a class="white_text" v-if="index < 3" href="#">
-              <img class="symbol" v-if="index == 0" src="svg/svg-0.svg">
-              {{link}}
-            </a>
+
+          <!-- link alla sinistra del logo -->
+          <div class="box left">
+            <span v-for="(link, index) in headerLinks">
+              <a class="white_text" v-if="index < 3" href="#">
+                <img class="symbol" v-if="index == 0" src="svg/svg-0.svg">
+                {{link}}
+              </a>
+            </span>
           </div>
+
 
           <!-- logo centrale -->
           <img class="logo" src="img/h5-logo-divided-header.png" alt="">
 
-          <!-- parte destra dei link -->
-          <div v-for="(link, index) in headerLinks">
-            <a class="white_text" v-if="index >= 3" href="#">
-              <img class="symbol" v-if="index == 0" src="svg/svg-0.svg">{{link}}
-            </a>
+          <!-- link alla destra del logo -->
+          <div class="box right">
+            <span v-for="(link, index) in headerLinks">
+              <a class="white_text" v-if="index >= 3 && index < 6" href="#">
+                <img class="symbol" v-if="index == 0" src="svg/svg-0.svg">
+                {{link}}
+              </a>
+            </span>
+          </div>
+
+
+          <!-- link in alto a destra (cart e search) -->
+          <div class="box right">
+            <span v-for="(link, index) in headerLinks">
+              <a class="white_text" v-if="index >= 6" href="#">
+                <span class="position" v-if="index == 6">
+                  <img class="symbol bike" src="svg/svg-1.svg">
+                  <div class="backpack">0</div>
+                </span>
+                <i class="fas fa-search symbol" v-else-if="index == 7"></i>
+                {{link}}
+              </a>
+            </span>
+          </div>
+
+
+        </div>
+
+        <!-- contenitore immagine -->
+        <div class="jumbotron">
+
+          <div class="arrow prev">
+
+          </div>
+
+          <img src="img/h3-rev-img-2.png" alt="">
+
+          <div class="arrow next">
+
           </div>
 
         </div>
