--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
 
           <!-- pulsante ordina online -->
           <div class="box left">
-            <a class="white_text button"href="#">ORDER ONLINE</a>
+            <span v-for="(link, index) in headerLinks">
+              <a class="white_text button" v-if="index == 0" href="#">
+                {{link}}
+              </a>
+            </span>
           </div>
 
 
           <!-- link alla sinistra del logo -->
           <div class="box left">
             <span v-for="(link, index) in headerLinks">
-              <a class="white_text" v-if="index < 3" href="#">
-                <img class="symbol" v-if="index == 0" src="svg/svg-0.svg">
+              <a class="white_text" v-if="index >= 1 && index < 4" href="#">
+                <img class="symbol" v-if="index == 1" src="svg/svg-0.svg">
                 {{link}}
               </a>
             </span>
@@ -36,13 +40,12 @@
 
 
           <!-- logo centrale -->
-          <img class="logo" src="img/h5-logo-divided-header.png" alt="">
+          <img class="logo" :src="logo" alt="">
 
           <!-- link alla destra del logo -->
           <div class="box right">
             <span v-for="(link, index) in headerLinks">
-              <a class="white_text" v-if="index >= 3 && index < 6" href="#">
-                <img class="symbol" v-if="index == 0" src="svg/svg-0.svg">
+              <a class="white_text" v-if="index >= 4 && index < 7" href="#">
                 {{link}}
               </a>
             </span>
@@ -52,12 +55,12 @@
           <!-- link in alto a destra (cart e search) -->
           <div class="box right">
             <span v-for="(link, index) in headerLinks">
-              <a class="white_text" v-if="index >= 6" href="#">
-                <span class="position" v-if="index == 6">
+              <a class="white_text" v-if="index >= 7" href="#">
+                <span class="position" v-if="index == 7">
                   <img class="symbol bike" src="svg/svg-1.svg">
                   <div class="backpack">0</div>
                 </span>
-                <i class="fas fa-search symbol" v-else-if="index == 7"></i>
+                <i class="fas fa-search symbol" v-else-if="index == 8"></i>
                 {{link}}
               </a>
             </span>
@@ -68,21 +71,20 @@
 
         <!-- contenitore immagine -->
         <div class="jumbotron">
-
-          <div class="arrow prev">
-
-          </div>
-
           <img src="img/h3-rev-img-2.png" alt="">
-
-          <div class="arrow next">
-
-          </div>
-
         </div>
 
+        <div class="arrow prev">
+          <div class="arrow_text">
+            PREV
+          </div>
+        </div>
 
-
+        <div class="arrow next">
+          <div class="arrow_text">
+            NEXT
+          </div>
+        </div>
 
       </header>
 
