Section testimonial finita (senza Carousel funzionante)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Pizza</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   </head>
@@ -113,11 +114,41 @@
       </section>
 
       <!-- carousel con recensioni di riviste -->
-      <section class="reviews">
+      <section class="testimonials">
+
+        <!-- dichiarazione del testimonial -->
+        <i class="fas fa-quote-left"></i>
+        <div class="quote">"FORGET THE TRENDY PIZZA SHOPS, THIS HIDDEN SPOT MAKES THE BEST NEW YORK-STYLE PIZZA SLICE IN NAPLES"</div>
+        <div class="journal">WASHINGTON POST 2018</div>
+
+        <!-- pallini carousel -->
+        <div class="dots">
+          <i class="fas fa-circle active"></i>
+          <i class="fas fa-circle"></i>
+          <i class="fas fa-circle"></i>
+        </div>
+
+        <!-- frecce carousel -->
+        <div class="arrow prev">
+          <div class="arrow_text">
+            PREV
+          </div>
+        </div>
+        <div class="arrow next">
+          <div class="arrow_text">
+            NEXT
+          </div>
+        </div>
+
+        <!-- simbolo pizza -->
+        <img class="pizza" src="svg/svg-4.svg" alt="">
 
       </section>
 
       <!-- sezione divisa in due con a sinistra una immagine e a destra il menú -->
+      <section class="menu">
+
+      </section>
 
       <!-- sezione con un dettaglio grafico ed una scritta centrale -->
 
