Sezione menu finita

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Pizza</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   </head>
@@ -147,6 +147,48 @@
 
       <!-- sezione divisa in due con a sinistra una immagine e a destra il menú -->
       <section class="menu">
+
+        <!-- logo pizza specials a sinistra -->
+        <div class="half left">
+          <img src="img/h1-img-7n.png" alt="">
+        </div>
+
+        <!-- menu di destra -->
+        <div class="half right">
+
+          <div>
+            <div class="title">SPECIALS*</div>
+            <div class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesent ut.</div>
+          </div>
+
+          <div class="combo">
+            <div class="price">$10</div>
+            <div class="right-column">
+              <div class="name">COMBO PICCOLO</div>
+              <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesent ut aliquam dui.</div>
+            </div>
+          </div>
+
+          <div class="combo">
+            <div class="price">$20</div>
+            <div class="right-column">
+              <div class="name">COMBO MEZZO</div>
+              <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesent ut aliquam dui.</div>
+            </div>
+          </div>
+
+          <div class="combo">
+            <div class="price">$30</div>
+            <div class="right-column">
+              <div class="name">COMBO GRANDE</div>
+              <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesent ut aliquam dui.</div>
+            </div>
+          </div>
+
+          <!-- simbolo pizza -->
+          <img class="pizza" src="svg/svg-4.svg" alt="">
+
+        </div>
 
       </section>
 
