Sezione build finita

--- a/index.html
+++ b/index.html
@@ -186,15 +186,44 @@
           </div>
 
           <!-- simbolo pizza -->
-          <img class="pizza" src="svg/svg-4.svg" alt="">
+          <img class="pizza circle grey" src="svg/svg-4.svg" alt="">
 
         </div>
 
       </section>
 
       <!-- sezione con un dettaglio grafico ed una scritta centrale -->
+      <section class="build">
+
+        <div class="bg top left"></div>
+
+        <div class="bg top center"></div>
+
+        <div class="bg top right"></div>
+
+        <div class="bg middle left"></div>
+
+        <div class="bg middle center">
+          <div class="slogan">GO AHEAD AND BUILD YOUR OWN PIZZA WE WON'T JUDGE!</div>
+        </div>
+
+        <div class="bg middle right">
+          <!-- simbolo pizza -->
+          <img class="pizza circle white" src="svg/svg-4.svg" alt="">
+        </div>
+
+        <div class="bg bottom left"></div>
+
+        <div class="bg bottom center"></div>
+
+        <div class="bg bottom right"></div>
+
+      </section>
 
       <!-- sezione con 4 foto di staff con comportamento on hover -->
+      <section class="staff">
+
+      </section>
 
       <!-- sezione con loghi di locali affiliati (o sponsor) -->
 
