Sezione team finita

--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
         </div>
 
         <div class="news">
-          <img class="news" src="img/h3-img-2.jpg" alt="">
+          <img src="img/h3-img-2.jpg" alt="">
           <img class="eye" src="svg/svg-2.svg" alt="">
         </div>
 
         <div class="news">
-          <img class="news" src="img/h3-img-3.jpg" alt="">
+          <img src="img/h3-img-3.jpg" alt="">
           <img class="eye" src="svg/svg-2.svg" alt="">
         </div>
 
         <div class="news">
-          <img class="news" src="img/h3-img-4.jpg" alt="">
+          <img src="img/h3-img-4.jpg" alt="">
           <img class="eye" src="svg/svg-2.svg" alt="">
         </div>
 
@@ -220,8 +220,69 @@
 
       </section>
 
-      <!-- sezione con 4 foto di staff con comportamento on hover -->
-      <section class="staff">
+      <!-- sezione con 4 foto di dipendenti con comportamento on hover -->
+      <section class="team">
+
+        <!-- ognuno dei 4 dipendenti é contenuta in un div in modo da mantenere le dimensioni -->
+        <div class="employee">
+          <!-- foto -->
+          <img src="img/h1-team-1a.jpg" alt="">
+          <!-- informazioni che appaiono in hover -->
+          <div class="curriculum">
+            <div class="name">MARK GIACOMELLI</div>
+            <div class="job">Kitchen Porter</div>
+            <div class="social">
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-facebook-f"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="employee">
+          <img src="img/h1-team-2a.jpg" alt="">
+          <!-- informazioni che appaiono in hover -->
+          <div class="curriculum">
+            <div class="name">JASMINE TRUSSARDI</div>
+            <div class="job">Kitchen Porter</div>
+            <div class="social">
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-facebook-f"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="employee">
+          <img src="img/h1-team-4a.jpg" alt="">
+          <!-- informazioni che appaiono in hover -->
+          <div class="curriculum">
+            <div class="name">FRANK BAILEY</div>
+            <div class="job">Kitchen Porter</div>
+            <div class="social">
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-facebook-f"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="employee">
+          <img src="img/h1-team-3a.jpg" alt="">
+          <!-- informazioni che appaiono in hover -->
+          <div class="curriculum">
+            <div class="name">SOPHIA BRIDGES</div>
+            <div class="job">Kitchen Porter</div>
+            <div class="social">
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-facebook-f"></i>
+            </div>
+          </div>
+        </div>
+
+        <!-- simbolo pizza -->
+        <img class="pizza circle white" src="svg/svg-4.svg" alt="">
 
       </section>
 
