Sezione affiliate finita

--- a/index.html
+++ b/index.html
@@ -287,6 +287,13 @@
       </section>
 
       <!-- sezione con loghi di locali affiliati (o sponsor) -->
+      <section class="affiliate">
+        <img src="img/h1-clients-img-4.png" alt="">
+        <img src="img/h1-clients-img-3.png" alt="">
+        <img src="img/h1-clients-img-1.png" alt="">
+        <img src="img/h1-clients-img-2.png" alt="">
+        <img src="img/h1-clients-img-5.png" alt="">
+      </section>
 
       <!-- sezione con l'elenco di pizze in orizzontale (quelle esterne sono tagliate ma non vedo barre quindi immagino ci sia un hoverflow hidden) -->
 
