Sezione menu con le pizze finita

--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
         </div>
 
         <!-- simbolo pizza -->
-        <img class="pizza" src="svg/svg-4.svg" alt="">
+        <img class="slice" src="svg/svg-4.svg" alt="">
 
       </section>
 
       <!-- sezione divisa in due con a sinistra una immagine e a destra il menú -->
-      <section class="menu">
+      <section class="offers">
 
         <!-- logo pizza specials a sinistra -->
         <div class="half left">
           <img src="img/h1-img-7n.png" alt="">
         </div>
 
-        <!-- menu di destra -->
+        <!-- offerte a destra -->
         <div class="half right">
 
           <div>
@@ -186,7 +186,7 @@
           </div>
 
           <!-- simbolo pizza -->
-          <img class="pizza circle grey" src="svg/svg-4.svg" alt="">
+          <img class="slice circle grey" src="svg/svg-4.svg" alt="">
 
         </div>
 
@@ -209,7 +209,7 @@
 
         <div class="bg middle right">
           <!-- simbolo pizza -->
-          <img class="pizza circle white" src="svg/svg-4.svg" alt="">
+          <img class="slice circle white" src="svg/svg-4.svg" alt="">
         </div>
 
         <div class="bg bottom left"></div>
@@ -282,7 +282,7 @@
         </div>
 
         <!-- simbolo pizza -->
-        <img class="pizza circle white" src="svg/svg-4.svg" alt="">
+        <img class="slice circle white" src="svg/svg-4.svg" alt="">
 
       </section>
 
@@ -296,12 +296,85 @@
       </section>
 
       <!-- sezione con l'elenco di pizze in orizzontale (quelle esterne sono tagliate ma non vedo barre quindi immagino ci sia un hoverflow hidden) -->
+      <section class="menu">
+
+        <!-- parte superiore del menu -->
+        <div class="menu_top">
+          <div class="choose">CHOSE YOUR FLAVOR</div>
+          <div class="title">THE BEST PIZZA MENU IN TOWN</div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut blandit arcu in pretium molestie. Interdum et malusuada fames ac.</div>
+
+          <!-- simbolo pizza -->
+          <img class="slice circle grey" src="svg/svg-4.svg" alt="">
+        </div>
+
+        <!-- parte inferiore del menu -->
+        <div class="menu_bottom">
+
+          <!-- pizze con varie informazioni -->
+          <div class="pizza">
+            <img src="img/h3-product-img-1a.png" alt="">
+            <div class="name">BISMARCK</div>
+            <span class="discount">$45.00</span>
+            <span class="price">$30.00</span>
+          </div>
+
+          <div class="pizza">
+            <img src="img/h3-product-img-2a.png" alt="">
+            <div class="name">FIORI DI ZUCCA</div>
+            <span class="price">$7.00 - $50.00</span>
+          </div>
+
+          <div class="pizza">
+            <img src="img/h3-product-img-6a.png" alt="">
+            <div class="name">VALDOSTANA</div>
+            <span class="price">$55.00</span>
+
+            <!-- simbolo sold in alto a destra -->
+            <div class="sold">SOLD</div>
+          </div>
+
+          <div class="pizza">
+            <img src="img/h3-product-img-4a.png" alt="">
+            <div class="name">PIZZA TARTUFATA</div>
+            <span class="price">$45.00</span>
+          </div>
+
+          <div class="pizza">
+            <img src="img/h3-product-img-5a.png" alt="">
+            <div class="name">FRANCESCANA</div>
+            <span class="price">$25.00</span>
+          </div>
+
+          <div class="pizza">
+            <img src="img/h3-product-img-3a.png" alt="">
+            <div class="name">CAMPAGNOLA</div>
+            <span class="price">$50.00 - $95.00</span>
+          </div>
+
+          <!-- simbolo in basso a destra -->
+          <div class="icon">
+            <img src="svg/svg-7.svg" alt="">
+          </div>
+
+        </div>
+
+      </section>
 
       <!-- sezione divisa in due con a sinistra alcuni eventi e a destra un fumetto -->
+      <section class="events">
+
+      </section>
 
       <!-- sezione con per prenotazione con vari input -->
+      <section class="book">
+
+      </section>
 
       <!-- footer con i vari link a sinistra e con una immagine a destra -->
+      <footer>
+
+      </footer>
 
     </div>
 
