Prima parte eventi

--- a/index.html
+++ b/index.html
@@ -364,6 +364,36 @@
       <!-- sezione divisa in due con a sinistra alcuni eventi e a destra un fumetto -->
       <section class="events">
 
+        <!-- date a sinistra -->
+        <div class="half left">
+        </div>
+
+        <!-- fumetto a destra -->
+        <div class="half right">
+
+          <!-- contenitore invisibile per i simboli in alto a destra -->
+          <div class="top">
+
+            <!-- simbolo carrello -->
+            <div class="icon">
+              <img src="svg/svg-9.svg" alt="">
+            </div>
+
+            <!-- simbolo pizza -->
+            <img class="slice circle grey" src="svg/svg-4.svg" alt="">
+
+          </div>
+
+          <!-- contenitore invisibile per la pizza in centro -->
+          <div class="middle">
+
+            <!-- simbolo pizza -->
+            <img class="slice circle grey" src="svg/svg-4.svg" alt="">
+
+          </div>
+
+        </div>
+
       </section>
 
       <!-- sezione con per prenotazione con vari input -->
