Sezione eventi finita

--- a/index.html
+++ b/index.html
@@ -366,6 +366,61 @@
 
         <!-- date a sinistra -->
         <div class="half left">
+
+          <div class="subtitle">MADE WITH LOVE</div>
+          <div class="title">DELISH PIZZA DEALS</div>
+          
+          <div class="event">
+
+            <div class="date">
+              <div class="day">02</div>
+              <div class="month">NOV</div>
+            </div>
+
+            <div class="place">
+              <div class="name">TRADITIONAL NEAPOLITAN PIES IN KYOTO PIZZA MERCATO</div>
+              <div class="address">
+                <i class="fas fa-map-marker-alt"></i>
+                <span>204 E. Pizzetta Tommaso</span>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="event">
+
+            <div class="date">
+              <div class="day">03</div>
+              <div class="month">NOV</div>
+            </div>
+
+            <div class="place">
+              <div class="name">TERRAZZA PATIO DINING SPACE OPENING THIS WEEKEND</div>
+              <div class="address">
+                <i class="fas fa-map-marker-alt"></i>
+                <span>204 E. Pizzetta Tommaso</span>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="event">
+
+            <div class="date">
+              <div class="day">05</div>
+              <div class="month">NOV</div>
+            </div>
+
+            <div class="place">
+              <div class="name">SIENNA PRIVATE DINING ROOM WITH STÉPHANE BRUNN</div>
+              <div class="address">
+                <i class="fas fa-map-marker-alt"></i>
+                <span>204 E. Pizzetta Tommaso</span>
+              </div>
+            </div>
+
+          </div>
+
         </div>
 
         <!-- fumetto a destra -->
