Sezione book finita (manca footer + refactoring + volendo carousels)

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
           <div class="subtitle">MADE WITH LOVE</div>
           <div class="title">DELISH PIZZA DEALS</div>
-          
+
           <div class="event">
 
             <div class="date">
@@ -453,6 +453,41 @@
 
       <!-- sezione con per prenotazione con vari input -->
       <section class="book">
+
+        <div class="line">
+
+          <div class="divisor">
+            <div class="box">
+              <input placeholder="1 Person">
+              <i class="fas fa-user-friends"></i>
+            </div>
+            <div class="conjunction">FOR</div>
+          </div>
+
+          <div class="divisor">
+            <div class="box">
+              <input placeholder="11/29/2020">
+              <i class="far fa-calendar"></i>
+            </div>
+            <div class="conjunction">AT</div>
+          </div>
+
+          <div class="divisor">
+            <div class="box">
+              <input placeholder="7:00 pm">
+              <i class="far fa-clock"></i>
+            </div>
+          </div>
+
+          <div class="divisor">
+            <button>BOOK A TABLE</button>
+          </div>
+
+        </div>
+
+        <div class="line">
+          <div class="credits">*Powered by OpenTable</div>
+        </div>
 
       </section>
 
