Parte destra footer

--- a/index.html
+++ b/index.html
@@ -494,6 +494,16 @@
       <!-- footer con i vari link a sinistra e con una immagine a destra -->
       <footer>
 
+        <!-- parte di sinistra con le informazioni-->
+        <div class="half left">
+
+        </div>
+
+        <!-- immagine a destra -->
+        <div class="half right">
+          <img class="slice circle white" src="svg/svg-4.svg" alt="">
+        </div>
+
       </footer>
 
     </div>
